Fix [amp-fx] FX element must have `overflow: hidden` [#navbar]

--- a/_includes/css/amp-custom.css
+++ b/_includes/css/amp-custom.css
@@ -4,6 +4,11 @@
     right: 0;
     left: 0;
     z-index: 1030;
+    overflow: hidden;
+}
+
+.fixed-top:hover, .fixed-top:focus-visible {
+    overflow: visible;
 }
 
 #toggle-search {
